# csmapfx

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  CMakeSettings.json  COPYING  CSMap.sln  CSMap.vcproj  CSMap.vcxproj  CSMap.vcxproj.filters  CsMapFX.exe.manifest  Dockerfile  FXEditor.cpp  FXEditor.h  FXFileDialogEx.cpp  FXFileDialogEx.h  FXMenuSeparatorEx.cpp  FXMenuSeparatorEx.h  FXSplitterEx.cpp  FXSplitterEx.h  HOWTO.md  Localization.cmake  Makefile  README.md  TODO.md  badgif.data  bindings.cpp  bindings.h  building_props.cpp  building_props.h  calc.cpp  calc.h  ceval.h  commands.cpp  commands.h  contextmenu.cpp  contextmenu.h  csicon.data  (+92 more)
.github/workflows/: main.yml  release.yml
boost/: nodynlibs.hpp
boost/signals/: signal_base.cpp
bullets/: Thumbs.db  bullets.data
debian/: changelog  control  copyright  install  rules
debian/source/: options
po/: POTFILES.in  csmapfx.de.po  csmapfx.pot  csmapfx_de_DE.po  de.po
ruby/: config.h
s/: build  coverity  deb-build  docker-build  xvfb-screenshot  xvfb-start
symbols/: Thumbs.db  symbols.data  toolbar.data
terrain/: Thumbs.db  symbols.data  terrain.data
tinyjs/: TinyJS.cpp  TinyJS_Functions.cpp  TinyJS_MathFunctions.cpp
tools/: installer.ps1
